--- a/BlogBASC/BlogBASC/BlogBASC.csproj
+++ b/BlogBASC/BlogBASC/BlogBASC.csproj
@@ -200,6 +200,7 @@
     <Content Include="Content\css\iconic\css\iconmonstr-iconic-font.min.css" />
     <Content Include="Content\css\main.css" />
     <Content Include="Content\css\vendor.css" />
+    <Content Include="Content\images\3.jpg" />
     <Content Include="Content\images\5.jpg" />
     <Content Include="Content\images\an20 - Kopya.JPG" />
     <Content Include="Content\images\an20.JPG" />
