--- a/BlogBASC/BlogBASC/BlogBASC.csproj
+++ b/BlogBASC/BlogBASC/BlogBASC.csproj
@@ -456,6 +456,8 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Blog.cshtml" />
     <Content Include="Views\Shared\_Layout1.cshtml" />
+    <Content Include="Views\Category\CategoryMenu.cshtml" />
+    <Content Include="Views\Blog\List.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
