--- a/BlogBASC/BlogBASC/BlogBASC.csproj
+++ b/BlogBASC/BlogBASC/BlogBASC.csproj
@@ -168,6 +168,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\BlogController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -199,6 +200,7 @@
     <Content Include="Content\css\iconic\css\iconmonstr-iconic-font.css" />
     <Content Include="Content\css\iconic\css\iconmonstr-iconic-font.min.css" />
     <Content Include="Content\css\main.css" />
+    <Content Include="Content\css\simple-sidebar.css" />
     <Content Include="Content\css\vendor.css" />
     <Content Include="Content\images\blog\1.JPG" />
     <Content Include="Content\images\3.jpg" />
@@ -458,9 +460,12 @@
     <Content Include="Views\Shared\_Layout1.cshtml" />
     <Content Include="Views\Category\CategoryMenu.cshtml" />
     <Content Include="Views\Blog\List.cshtml" />
+    <Content Include="Views\Shared\_AdminLayout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Areas\" />
+    <Folder Include="Views\Admin\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
