Identity işlemleri yapıldı

--- a/BlogBASC/BlogBASC/Web.config
+++ b/BlogBASC/BlogBASC/Web.config
@@ -9,6 +9,8 @@
   <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-BlogBASC-UserDB.mdf;Initial Catalog=aspnet-WebApplication2-20191222070301;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
     <add name="blogVT" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\BlogBASC-DB.mdf;Initial Catalog=BlogBASC-DB;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -94,7 +96,7 @@
   <location path="images">
     <system.web>
       <authorization>
-        <allow users="?"/>
+        <allow users="?" />
       </authorization>
     </system.web>
   </location>
