--- a/BlogBASC/BlogBASC/BlogBASC.csproj
+++ b/BlogBASC/BlogBASC/BlogBASC.csproj
@@ -67,6 +67,13 @@
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.IdentityModel.Logging, Version=5.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.IdentityModel.Logging.5.6.0\lib\net461\Microsoft.IdentityModel.Logging.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.IdentityModel.Tokens, Version=5.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.IdentityModel.Tokens.5.6.0\lib\net461\Microsoft.IdentityModel.Tokens.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Owin, Version=4.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Owin.4.1.0\lib\net45\Microsoft.Owin.dll</HintPath>
     </Reference>
@@ -200,7 +207,6 @@
     <Content Include="Content\css\iconic\css\iconmonstr-iconic-font.css" />
     <Content Include="Content\css\iconic\css\iconmonstr-iconic-font.min.css" />
     <Content Include="Content\css\main.css" />
-    <Content Include="Content\css\simple-sidebar.css" />
     <Content Include="Content\css\vendor.css" />
     <Content Include="Content\images\blog\1.JPG" />
     <Content Include="Content\images\3.jpg" />
