--- a/BlogBASC/BlogBASC/packages.config
+++ b/BlogBASC/BlogBASC/packages.config
@@ -20,6 +20,8 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages.tr" version="3.2.7" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.6.0" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.6.0" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net461" />
   <package id="Microsoft.Owin" version="4.1.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.1.0" targetFramework="net461" />
